tests/baselines/reference/importDeclWithDeclareModifierInAmbientContext.errors.txt
==== tests/cases/compiler/importDeclWithDeclareModifierInAmbientContext.ts (3 errors) ====
    declare module "m" {
        module x {
            interface c {
            }
        }
        declare export import a = x.c;
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        ~~~~~~~
!!! error TS1079: A 'declare' modifier cannot be used with an import declaration.
                ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
        var b: a;
    }
    